# briann

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README Developer.md  README.md  Synthetic Data Schema.drawio  bug report.txt  conf.py  demo.py  how to write a briann configuration file.txt  index.rst  pyproject.toml  requirements.txt  setup.py
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/: .$Class Diagram.drawio.bkp  .$Class Diagram.drawio.dtmp  .$Synthetic Data Schema.drawio.bkp  .$core module visualization.drawio.bkp  Class Diagram.drawio  briann.GUI.rst  briann.network.rst  briann.rst  briann.training.rst  briann.utilities.rst  conf.py  core module visualization.drawio  index.rst  modules.rst
docs/source/: briann.c_plus_plus.GPU.rst  briann.c_plus_plus.rst  briann.python.network.rst  briann.python.rst  briann.python.utilities.rst  briann.rst  conf.py  index.rst  modules.rst  pybriann.network.rst  pybriann.rst  pybriann.utilities.rst
experiments/: simple experiment.py  training_configuration.json
experiments/Inference/: example_with_gui.py
experiments/configurations/: briann_2.py  example_briann.py  vggish.py
experiments/genetic algorithm/: genetic algorithm driver.py
experiments/purely feed forward models/line graphs/: driver.py
experiments/sinusoids/: data_loader.py  inference_with_gui.py  model_loader.py  training routine.py
experiments/training/: simple training routine.py
experiments/vggish/: data_loader.py  inference_with_gui.py  load_weights.py  model_loader.py  training routine.py  vggish_input.py
notes/: spiking neural networks.txt
source/: index.rst
src/briann/: areas.py
src/briann/GUI/: model_explorer.py
src/briann/c_plus_plus/GPU/: __init__.py  memory_management.cpp  operations.cpp  operations.py
src/briann/cppbriann/: __init__.py
src/briann/network/: core.py
src/briann/pybriann/: accesscpp.py
src/briann/python/: accesscpp.py
src/briann/python/GUI/: default configuration.json  model_explorer.py
src/briann/python/network/: components.py  connection_transformations.py  core.py  random.py
src/briann/python/training/: data_management.py
src/briann/python/utilities/: playground.py  utilities.py
src/briann/training/: briann storage rules.txt  data_management.py
src/briann/utilities/: vggish_input.py
src/cppbriann/advanced/: CMakeLists.txt  person.cpp  person.h  pybind_wrapper.cpp  script.py
src/cppbriann/simple/: CMakeLists.txt  pybind_wrapper.cpp  script.py
src/pybriann/: network_components.py  plyground.cpp  utilities.py
src/pybriann/network/: components.py  playground.py
tests/: briann 1.json  briann 2 state_dict.json  briann 2.json  test_basic.py  test_network_components.py
tests/python/network/: test_connection_transformations.py  test_core.py
tests/python/utilities/: test_callbacks.py  test_file_management.py
unit_tests/: test_network_components.py
